k8s/namespaces/snowflake/snowflake/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snowflake
  namespace: snowflake
  labels:
    app.kubernetes.io/name: snowflake
    app.kubernetes.io/managed-by: flux
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: snowflake
  template:
    metadata:
      labels:
        app.kubernetes.io/name: snowflake
        app.kubernetes.io/managed-by: flux
    spec:
      automountServiceAccountToken: false
      containers:
        - name: snowflake
          # renovate: datasource=docker depName=containers.torproject.org/tpo/anti-censorship/pluggable-transports/snowflake
          image: containers.torproject.org/tpo/anti-censorship/pluggable-transports/snowflake:latest@sha256:53658adcf8183ed387a8abce383536f45d72b4688638e078d6c1686970199feb
          imagePullPolicy: IfNotPresent
          args:
            - -verbose
            - -capacity
            - "10"
            - -metrics
            - -metrics-port
            - "9000"
            - -metrics-address
            - "0.0.0.0"
          ports:
            - name: metrics
              containerPort: 9000
              protocol: TCP
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "500m"
              memory: "512Mi"
              ephemeral-storage: "5Gi"
