k8s/namespaces/snowflake/snowflake/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snowflake
  namespace: snowflake
  labels:
    app.kubernetes.io/name: snowflake
    app.kubernetes.io/managed-by: flux
spec:
  selector:
    app.kubernetes.io/name: snowflake
    app.kubernetes.io/managed-by: flux
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: snowflake-metrics
  type: ClusterIP
